--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">UEFS</string>
+    <string name="form_username">Username</string>
+    <string name="form_password">Password</string>
+    <string name="login_btn">Login</string>
 </resources>
