Login Activity [Code:1]

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -4,4 +4,7 @@
     <string name="form_username">Usuário</string>
     <string name="form_password">Senha</string>
     <string name="login_btn">Entrar</string>
+    <string name="invalid_username">Usuário Inválido</string>
+    <string name="invalid_password">Senha Inválida</string>
+    <string name="connecting">Entrando...</string>
 </resources>
