--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="form_username">Username</string>
     <string name="form_password">Password</string>
     <string name="login_btn">Login</string>
+    <string name="invalid_username">Invalid Username</string>
+    <string name="invalid_password">Invalid Password</string>
+    <string name="connecting">Connecting...</string>
 </resources>
