--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="invalid_username">Invalid Username</string>
     <string name="invalid_password">Invalid Password</string>
     <string name="connecting">Connecting...</string>
+    <string name="login_failed_response">Connection error</string>
 </resources>
