--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,34 +33,6 @@
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
-
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
-
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
         <item>30 minutes</item>
@@ -68,6 +40,7 @@
         <item>3 hours</item>
         <item>6 hours</item>
         <item>Never</item>
+        <item>60Hz</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
         <item>15</item>
@@ -76,31 +49,31 @@
         <item>180</item>
         <item>360</item>
         <item>-1</item>
+        <item>-2</item>
     </string-array>
 
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <string-array name="multi_select_list_preference_default_value"/>
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
+    <!-- Notifications Preferences -->
     <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
+    <string name="pref_show_class_notification">Classes</string>
+    <string name="pref_show_class_notification_enabled">You\'ll be notified when classes are about to start</string>
+    <string name="pref_show_class_notification_disabled">You\'ll not be notified when classes are about to start</string>
+    <string name="pref_show_message_notification">Messages</string>
+    <string name="pref_show_message_notification_enabled">You\'ll be notified when a new message arrive</string>
+    <string name="pref_show_message_notification_disabled">You\'ll not be notified when a new message arrive</string>
+    <string name="pref_notification_sound">Ringtone</string>
+    <string name="pref_notification_header">Notifications</string>
     <string name="pref_title_vibrate">Vibrate</string>
+
+    <!-- Data Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+    <string name="pref_sync_frequency">Sync frequency</string>
+    <string name="pref_sync_frequency_enabled">Every %1$s</string>
+    <string name="settings">Settings</string>
+    <string name="pref_account_settings">Account</string>
+    <string name="pref_not_working_still">Not working, not even try</string>
+    <string name="pref_new_message_vibration_enabled">Vibrate on notification</string>
+    <string name="pref_new_message_vibration_disabled">Do not vibrate on notification</string>
+    <string name="pref_notification_sound_summary">Set notification sound</string>
+    <string name="pref_logoff">Logoff</string>
+    <string name="pref_sync_frequency_never">Never update</string>
 </resources>
