--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -71,4 +71,5 @@
     </string-array>
     <string name="pref_logoff">Sair</string>
     <string name="pref_sync_frequency_never">Nunca atualizar</string>
+    <string name="pref_logoff_summary">Sair e limpar informações</string>
 </resources>
