--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="pref_notification_sound_summary">Set notification sound</string>
     <string name="pref_logoff">Logoff</string>
     <string name="pref_sync_frequency_never">Never update</string>
+    <string name="pref_logoff_summary">Exit and clean information</string>
 </resources>
