--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,18 +34,16 @@
 
     <!-- Strings related to Settings -->
     <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
         <item>1 hour</item>
+        <item>2 hours</item>
         <item>3 hours</item>
         <item>6 hours</item>
         <item>Never</item>
         <item>60Hz</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
         <item>60</item>
+        <item>120</item>
         <item>180</item>
         <item>360</item>
         <item>-1</item>
@@ -77,4 +75,5 @@
     <string name="pref_logoff">Logoff</string>
     <string name="pref_sync_frequency_never">Never update</string>
     <string name="pref_logoff_summary">Exit and clean information</string>
+    <string name="sagres_sync">Sagres Sync</string>
 </resources>
