--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="pref_not_working_still">Not working, not even try</string>
     <string name="pref_new_message_vibration_enabled">Vibrate on notification</string>
     <string name="pref_new_message_vibration_disabled">Do not vibrate on notification</string>
-    <string name="pref_notification_sound_summary">Set notification sound</string>
+    <string name="pref_notification_sound_summary">Change the notification sound</string>
     <string name="pref_logoff">Logoff</string>
     <string name="pref_sync_frequency_never">Never update</string>
     <string name="pref_logoff_summary">Exit and clean information</string>
