Fixed Network error message when trying to manually update the MessageBoardFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="pref_logoff_summary">Exit and clean information</string>
     <string name="sagres_sync">Sagres Sync</string>
     <string name="wait_before_updating_again">Wait before updating again</string>
+    <string name="network_error">Network Error</string>
 </resources>
