--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -72,4 +72,5 @@
     <string name="pref_logoff_summary">Sair e limpar informações</string>
     <string name="sagres_sync">Atualização Sagres</string>
     <string name="wait_before_updating_again">Espere para atualizar novamente</string>
+    <string name="network_error">Erro de conexão</string>
 </resources>
