--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -73,4 +73,8 @@
     <string name="sagres_sync">Atualização Sagres</string>
     <string name="wait_before_updating_again">Espere para atualizar novamente</string>
     <string name="network_error">Erro de conexão</string>
+    <string name="class_details_grades">Notas</string>
+    <string name="class_details_recent_messages">Últimos recados</string>
+    <string name="class_details">Detalhes da disciplina</string>
+    <string name="unable_to_fetch_grades">Não foi possível obter as notas</string>
 </resources>
