--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,8 @@
     <string name="sagres_sync">Sagres Sync</string>
     <string name="wait_before_updating_again">Wait before updating again</string>
     <string name="network_error">Network Error</string>
+    <string name="class_details_grades">Grades</string>
+    <string name="class_details_recent_messages">Recent messages</string>
+    <string name="class_details">Class details</string>
+    <string name="unable_to_fetch_grades">Unable to fetch grades</string>
 </resources>
