--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,7 @@
     <string name="class_details">Class details</string>
     <string name="unable_to_fetch_grades">Unable to fetch grades</string>
     <string name="grade_posted">New grade posted</string>
-    <string name="new_grade_notification">You got a %1$s at %2$s</string>
+    <string name="new_grade_notification">The grade of %1$s from %2$s is available.\nGo check it out!</string>
+    <string name="new_grade_notification_great">The grade of %1$s from %2$s is available.\nGo check it out!\n\nIt's a good one!</string>
+    <string name="class_details_cod_name">%1$s - %2$s</string>
 </resources>
