Show parsing progress :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,7 @@
     <string name="new_grade_notification">The grade of %1$s from %2$s is available.\nGo check it out!</string>
     <string name="new_grade_notification_great">The grade of %1$s from %2$s is available.\nGo check it out!\n\nIt's a good one!</string>
     <string name="class_details_cod_name">%1$s - %2$s</string>
+    <string name="initializing_app">Initializing App</string>
+    <string name="prepare_to_fetch_grades">Preparing to fetch grades</string>
+    <string name="fetching_grades_for_semester">Fetching grades from %1$s</string>
 </resources>
