--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -83,5 +83,5 @@
     <string name="class_details_cod_name">%1$s - %2$s</string>
     <string name="initializing_app">Iniciando Aplicativo</string>
     <string name="prepare_to_fetch_grades">Preparando baixar as notas</string>
-    <string name="fetching_grades_for_semester">Baixando notas do semestre %1$s</string>
+    <string name="fetching_grades_for_semester">Baixando informações do semestre %1$s</string>
 </resources>
