--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,8 +87,10 @@
     <string name="new_grade_notification_great">The grade of %1$s from %2$s is available.\nGo check it out!\n\nIt's a good one!</string>
     <string name="class_details_cod_name">%1$s - %2$s</string>
     <string name="initializing_app">Initializing App</string>
-    <string name="prepare_to_fetch_grades">Preparing to fetch infos</string>
-    <string name="fetching_grades_for_semester">Fetching infotmation from %1$s</string>
+    <string name="prepare_to_fetch_grades">Preparing to fetch info</string>
+    <string name="fetching_grades_for_semester">Fetching information from %1$s</string>
     <string name="drawer_open">Open Drawer</string>
     <string name="drawer_close">Close Drawer</string>
+    <string name="title_grades">Grades</string>
+    <string name="title_calendar">Calendar</string>
 </resources>
