This is a candidate for the open beta :)
Version 1.0b

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,24 @@
     <string name="drawer_close">Close Drawer</string>
     <string name="title_grades">Grades</string>
     <string name="title_calendar">Calendar</string>
+    <string name="creator">Created by João Paulo [facebook.com/ForceTower]\nVersion: %1$s</string>
+    <string name="click_to_know_about">Click to know about the App</string>
+    <string name="about_app_bugs_title">Bugs</string>
+    <string name="about_app_title">About App</string>
+    <string name="about_app_exit_title">Exit</string>
+    <string name="about_app_notifications_title">Notifications</string>
+    <string name="about_app_features_title">Features and Benefits</string>
+    <string name="about_app_privacy_title">Privacy</string>
+    <string name="about_app_disclaimer_title">Disclaimer</string>
+    <string name="about_app_presentation_title">About me</string>
+    <string name="about_app_enjoy">Enjoy :)</string>
+    <string name="about_app_presentation">Hi, I\'m João Paulo, student of Computer Engineering at UEFS. I\'ve developed this app because after 4 years studying at UEFS I\'ve always missed a mobile app for the student portal and then (after this whole time) I decided to create ir.
+        \n\nEvery start of semester, I used to walk around the campus looking for a Wi-Fi hotspot so I could know where my classes were. Also I think its kinda annoying how sagres does not warn you when something important is posted in it.
+        \n\nI hope this app help you all :)</string>
+    <string name="about_app_disclaimer">This app is not endorsed nor licensed by TecnoTrends and has no connection with the enterprise that offers the Sagres to the university. The app not intended for profit-making and was developed to help the day life of the students</string>
+    <string name="about_app_privacy">The information gathered by the app are only accessible by you. Your username and password are saved exclusively on YOUR SMARTPHONE(Or at your Google\'s account, in case your smartphone supports backup).</string>
+    <string name="about_app_features">After the first login you will have access to you schedule, grades and messages. These data are stored on your smartphone, so even when you have no connection you\'ll still be able to read the data and when your connection returns it will update the data again. The app updates your information periodically and you can control the frequency this happens</string>
+    <string name="about_app_notifications">You will receive a notification whenever someone posts a new Grade or a Message on the website (with some delay, based on the selected frequency)</string>
+    <string name="about_app_exit">At any moment you can logout by clicking at Settings>Logoff, this action will erase all the saved data related to your Sagres account from the device. You can login again at any time and return receiving notifications.</string>
+    <string name="about_app_bugs">For some stupid mistake, if your Android version is 8.0+ (Oreo) you\'ll not receive any notifications, I\'m working on fixing it :^)</string>
 </resources>
