--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -88,4 +88,25 @@
     <string name="drawer_close">Fechar gaveta</string>
     <string name="title_grades">Notas</string>
     <string name="title_calendar">Calendário</string>
+    <string name="creator">Criado por João Paulo [facebook.com/ForceTower]\nVersão: %1$s</string>
+
+    <string name="click_to_know_about">Clique para informações sobre o aplicativo</string>
+    <string name="about_app_presentation">Sou o João Paulo, aluno de Engenharia de Computação na UEFS. Desenvolvi este aplicativo pois depois de 4 anos na UEFS sempre senti falta de um aplicativo mobile e então (não sei por que demorou tanto) decidi fazer.
+        \n\nTodo início de semestre eu tinha que andar pelo campus para procurar um Wi-fi e então descobrir onde era a minha aula. E também sempre achei muito chato o Sagres não te notificar quando algo importante é colocado lá.
+        \n\nEspero que este aplicativo ajude vocês :)</string>
+    <string name="about_app_disclaimer">Este aplicativo não foi endorsado ou licenciado pela TecnoTrends e não tem nenhuma ligação com a empresa que fornece o serviço do Sagres à universidade. O aplicativo não possui nenhum fim lucrativo e foi desenvolvido para auxiliar o dia a dia dos estudantes da UEFS.</string>
+    <string name="about_app_privacy">As informações adquiridas pelo aplicativo não são transmitidas para mais ninguém alem de você. O usuário e senha digitados aqui ficam salvos APENAS no SMARTPHONE (Ou na SUA conta do Google, caso o seu celular suporte backup).</string>
+    <string name="about_app_features">Após o primeiro login, você terá acesso ao seu horário, notas e recados. Estes dados ficam salvos no seu smartphone, então caso você esteja sem internet você ainda poderá visualizar os dados, e quando você voltar à internet os dados serão atualizados. O aplicativo também atualiza as informações de forma automática de certo em certo tempo se houver conexão com a internet :)</string>
+    <string name="about_app_notifications">Você receberá uma notificação quando algum professor postar uma nota ou colocar um recado no portal.</string>
+    <string name="about_app_exit">A qualquer momento, você pode se desconectar da sua conta clicando em Configurações>Sair isso fará com que todos os relacionado à sua conta do Sagres no aplicativo sejam apagados, você voltará a receber notificações quando entrar novamente.</string>
+    <string name="about_app_bugs">Por burrices minhas, se você usa o Android 8.0+ (Oreo) você não irá receber notificações pois tem um bug que não consegui resolver ainda :^)</string>
+    <string name="about_app_enjoy">Aproveite :)</string>
+    <string name="about_app_features_title">Funções e Benefícios</string>
+    <string name="about_app_notifications_title">Notificações</string>
+    <string name="about_app_exit_title">Sair</string>
+    <string name="about_app_presentation_title">Sobre mim</string>
+    <string name="about_app_disclaimer_title">Aviso</string>
+    <string name="about_app_privacy_title">Privacidade</string>
+    <string name="about_app_title">Sobre o aplicativo</string>
+    <string name="about_app_bugs_title">Bugs</string>
 </resources>
