--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -91,7 +91,7 @@
     <string name="creator">Criado por João Paulo [facebook.com/ForceTower]\nVersão: %1$s</string>
 
     <string name="click_to_know_about">Clique para informações sobre o aplicativo</string>
-    <string name="about_app_presentation">Sou o João Paulo, aluno de Engenharia de Computação na UEFS. Desenvolvi este aplicativo pois depois de 4 anos na UEFS sempre senti falta de um aplicativo mobile e então (não sei por que demorou tanto) decidi fazer.
+    <string name="about_app_presentation">Sou o João Paulo, aluno de Engenharia de Computação na UEFS. Desenvolvi este aplicativo pois depois de muitos anos na UEFS sempre senti falta de um aplicativo mobile e então (não sei por que demorou tanto) decidi fazer.
         \n\nTodo início de semestre eu tinha que andar pelo campus para procurar um Wi-fi e então descobrir onde era a minha aula. E também sempre achei muito chato o Sagres não te notificar quando algo importante é colocado lá.
         \n\nEspero que este aplicativo ajude vocês :)</string>
     <string name="about_app_disclaimer">Este aplicativo não foi endorsado ou licenciado pela TecnoTrends e não tem nenhuma ligação com a empresa que fornece o serviço do Sagres à universidade. O aplicativo não possui nenhum fim lucrativo e foi desenvolvido para auxiliar o dia a dia dos estudantes da UEFS.</string>
