--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,7 +104,7 @@
     <string name="about_app_disclaimer_title">Disclaimer</string>
     <string name="about_app_presentation_title">About me</string>
     <string name="about_app_enjoy">Enjoy :)</string>
-    <string name="about_app_presentation">Hi, I\'m João Paulo, student of Computer Engineering at UEFS. I\'ve developed this app because after 4 years studying at UEFS I\'ve always missed a mobile app for the student portal and then (after this whole time) I decided to create ir.
+    <string name="about_app_presentation">Hi, I\'m João Paulo, student of Computer Engineering at UEFS. I\'ve developed this app because after some years studying at UEFS I\'ve always missed a mobile app for the student portal and then (after this whole time) I decided to create ir.
         \n\nEvery start of semester, I used to walk around the campus looking for a Wi-Fi hotspot so I could know where my classes were. Also I think its kinda annoying how sagres does not warn you when something important is posted in it.
         \n\nI hope this app help you all :)</string>
     <string name="about_app_disclaimer">This app is not endorsed nor licensed by TecnoTrends and has no connection with the enterprise that offers the Sagres to the university. The app not intended for profit-making and was developed to help the day life of the students</string>
