--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -91,9 +91,7 @@
     <string name="creator">Criado por João Paulo [facebook.com/ForceTower]\nVersão: %1$s</string>
 
     <string name="click_to_know_about">Clique para informações sobre o aplicativo</string>
-    <string name="about_app_presentation">Sou o João Paulo, aluno de Engenharia de Computação na UEFS. Desenvolvi este aplicativo pois depois de muitos anos na UEFS sempre senti falta de um aplicativo mobile e então (não sei por que demorou tanto) decidi fazer.
-        \n\nTodo início de semestre eu tinha que andar pelo campus para procurar um Wi-fi e então descobrir onde era a minha aula. E também sempre achei muito chato o Sagres não te notificar quando algo importante é colocado lá.
-        \n\nEspero que este aplicativo ajude vocês :)</string>
+    <string name="about_app_presentation">Oi, eu sou o João :)\nO código fonte do aplicativo está disponível em: github.com/ForceTower/UEFS_Sagres_App</string>
     <string name="about_app_disclaimer">Este aplicativo não foi endorsado ou licenciado pela TecnoTrends e não tem nenhuma ligação com a empresa que fornece o serviço do Sagres à universidade. O aplicativo não possui nenhum fim lucrativo e foi desenvolvido para auxiliar o dia a dia dos estudantes da UEFS.</string>
     <string name="about_app_privacy">As informações adquiridas pelo aplicativo não são transmitidas para mais ninguém alem de você. O usuário e senha digitados aqui ficam salvos APENAS no SMARTPHONE (Ou na SUA conta do Google, caso o seu celular suporte backup).</string>
     <string name="about_app_features">Após o primeiro login, você terá acesso ao seu horário, notas e recados. Estes dados ficam salvos no seu smartphone, então caso você esteja sem internet você ainda poderá visualizar os dados, e quando você voltar à internet os dados serão atualizados. O aplicativo também atualiza as informações de forma automática de certo em certo tempo se houver conexão com a internet :)</string>
