updated app name

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">UEFS</string>
+    <string name="app_name">UNES</string>
     <string name="form_username">Usuário</string>
     <string name="form_password">Senha</string>
     <string name="login_btn">Entrar</string>
