--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="pref_show_grades_notification_disabled">You\'ll not be notified when a new grade arrive</string>
     <string name="pref_show_grades_notification_enabled">You\'ll be notified when a new grade arrive</string>
     <string name="temporary_layout">Temporary Layout</string>
+    <string name="connection_failed">Connection Failed</string>
 </resources>
