--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,5 @@
     <string name="pref_show_grades_notification_enabled">You\'ll be notified when a new grade arrive</string>
     <string name="temporary_layout">Temporary Layout</string>
     <string name="connection_failed">Connection Failed</string>
+    <string name="class_is_undefined">Class Undefined (will be solved next version around 16/12</string>
 </resources>
