--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -118,7 +118,7 @@
     <string name="final_score_text">Média Final</string>
     <string name="connecting_you_dont_need_to_relog">Conectando, você não precisa entrar novamente</string>
     <string name="score_is">Score: %1$s</string>
-    <string name="temporary_layout">Tela temporária, ainda não acabada</string>
+    <string name="temporary_layout">Tela temporária, ainda não acabada. Será atualizada provavelmente semana que vem depois das minhas provas (15/12)</string>
     <string name="connection_failed">Conexão falhou. Se você está na UEFS, tente colocar o proxy 10.65.16.2 porta 3128</string>
     <string name="class_is_undefined">Aula Indefinida (Este bug será resolvido junto com os detalhes completos da turma, provavelmente dia 16/12)</string>
 </resources>
